# cfworker-newsletter

./: Cargo.toml  Makefile.toml  README.md  default.nix  flake.nix  rust-toolchain.toml  wrangler.toml
.github/workflows/: checks.yml  deploy.yml
crates/api/: Cargo.toml  Makefile.toml  wrangler.toml
crates/api/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/sendmail/: Cargo.toml  Makefile.toml  wrangler.toml
crates/sendmail/src/: lib.rs
migrations/: 0001_init_migration.sql
